// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index when required arguments are present and rest are defaults functions as expected when process is cluster master 1`] = `
Object {
  "master": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "$0": "index.js",
          "_": Array [],
          "n": 0,
          "o": "/bar",
          "output": "/bar",
          "s": "/foo",
          "source": "/foo",
          "v": false,
          "verbose": false,
          "w": false,
          "watch": false,
          "worker-count": 0,
          "workerCount": 0,
        },
        [Function],
        [Function],
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "worker": [MockFunction],
}
`;

exports[`index when required arguments are present and rest are defaults when process.send defined and process is cluster worker functions as expected when worker rejects 1`] = `
Object {
  "master": [MockFunction],
  "worker": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "$0": "index.js",
          "_": Array [],
          "n": 0,
          "o": "/bar",
          "output": "/bar",
          "s": "/foo",
          "source": "/foo",
          "v": false,
          "verbose": false,
          "w": false,
          "watch": false,
          "worker-count": 0,
          "workerCount": 0,
        },
        [Function],
        [Function],
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": Promise {},
      },
    ],
  },
}
`;

exports[`index when required arguments are present and rest are defaults when process.send defined and process is cluster worker functions as expected when worker resolves 1`] = `
Object {
  "master": [MockFunction],
  "worker": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "$0": "index.js",
          "_": Array [],
          "n": 0,
          "o": "/bar",
          "output": "/bar",
          "s": "/foo",
          "source": "/foo",
          "v": false,
          "verbose": false,
          "w": false,
          "watch": false,
          "worker-count": 0,
          "workerCount": 0,
        },
        [Function],
        [Function],
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": Promise {},
      },
    ],
  },
}
`;

exports[`index when required arguments are present and rest are overriden functions as expected when process is cluster master 1`] = `
Object {
  "master": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "$0": "index.js",
          "_": Array [],
          "n": 3,
          "o": "/bar",
          "output": "/bar",
          "s": "/foo",
          "source": "/foo",
          "v": false,
          "verbose": false,
          "w": true,
          "watch": true,
          "worker-count": 3,
          "workerCount": 3,
        },
        [Function],
        [Function],
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "worker": [MockFunction],
}
`;

exports[`index when required arguments are present and rest are overriden when process is cluster worker functions as expected when worker rejects 1`] = `
Object {
  "master": [MockFunction],
  "worker": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "$0": "index.js",
          "_": Array [],
          "n": 3,
          "o": "/bar",
          "output": "/bar",
          "s": "/foo",
          "source": "/foo",
          "v": false,
          "verbose": false,
          "w": true,
          "watch": true,
          "worker-count": 3,
          "workerCount": 3,
        },
        [Function],
        [Function],
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": Promise {},
      },
    ],
  },
}
`;

exports[`index when required arguments are present and rest are overriden when process is cluster worker functions as expected when worker resolves 1`] = `
Object {
  "master": [MockFunction],
  "worker": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "$0": "index.js",
          "_": Array [],
          "n": 3,
          "o": "/bar",
          "output": "/bar",
          "s": "/foo",
          "source": "/foo",
          "v": false,
          "verbose": false,
          "w": true,
          "watch": true,
          "worker-count": 3,
          "workerCount": 3,
        },
        [Function],
        [Function],
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": Promise {},
      },
    ],
  },
}
`;
